add function clear

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "klyg-file2head",
-  "description": "find js file and add to html tag head",
+  "description": "A Grunt-plugin,find .js or .css file add to html tag",
   "version": "0.0.2",
   "homepage": "https://github.com/huyinghuan/grunt-file2head",
   "author": {
